--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  profiles: default
   cloud:
     gateway:
       routes:
@@ -28,5 +29,19 @@ spring:
             - Path=/orders/**
         - id: product
           uri: http://localhost:8081
+          predicates:
+            - Path=/products/**
+---
+spring:
+  profiles: docker
+  cloud:
+    gateway:
+      routes:
+        - id: order
+          uri: http://order:8080
+          predicates:
+            - Path=/orders/**
+        - id: product
+          uri: http://product:8080
           predicates:
             - Path=/products/**
